# pollock

./: .gitignore  .gitmodules  Cargo.toml  README.md  deno.json  display.js  host.js  index.html  main.js  script.js  shell.nix
nix/: cargo-xtask.nix  jco-git.nix  jco.nix
nix/scripts/: package-lock.json  repair-lockfile.js  repair-lockfile.sh
scripts/: POCK.build
src/: lib.rs
src/component/: webgpu.rs
src/wasi/: webgpu.rs
src/wgfx/: frame_buffer.rs  graphics_context.rs  surface.rs  webgpu.rs
web-src/: index.html  script.js
web-src/interfaces/: web-elements.js  webgpu.js
wit/: pollock.wit
