[package]
name = "pollock"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.46.1", features = ["rt", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
wasm-bindgen = "0.2.100"
wgpu = "26.0.1"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "HtmlCanvasElement"
]
