[package]
name = "pollock"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
wit-bindgen = "0.43.0"

[package.metadata.component]
package = "halleyre:pollock"
[package.metadata.component.dependencies]
